# Philia-Lib-Legacy

./: .gitignore  Cargo.toml  rustfmt.toml
src/: client.rs  danbooru.rs  data.rs  download.rs  e621.rs  lib.rs  rule34.rs  search.rs  search_builder.rs  source.rs  sources.rs
src/data/: danbooru.rs  e621.rs  mod.rs  rule34.rs
src/search/: danbooru.rs  e621.rs  mod.rs  rule34.rs
src/tags/: e621.rs  mod.rs
