[package]
name = "philia"
version = "1.0.0"
edition = "2021"

[dependencies]
bitflags = "2.3.1"
itertools = "0.10.5"
serde_json = "1.0.89"
const_format = "0.2.30"
serde = { version = "1.0.148", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking"] }

rhai = { version = "1.14", optional = true, features = ["serde", "metadata", "sync"] }

[features]
scripting = ["rhai"]
additional_post_metadata = []